fixing wind card's overflowing

--- a/src/style/main/main.scss
+++ b/src/style/main/main.scss
@@ -24,7 +24,7 @@ section {
 
         .holder {
             display: grid;
-            grid-template-columns: 50% 50%;
+            grid-template-columns: 1fr 1fr;
             gap: 10px;
         }
     }
